# drawing-app

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml  run_server.py  setup_database.py
app/: __init__.py  canvas.py  layer_panel.py  main_window.py  toolbar.py
app/client/: __init__.py  api_client.py  auth_manager.py  collaboration_client.py
app/core/: __init__.py  file_handler.py  layer.py  layer_manager.py  style.py  tool.py  tool_manager.py
app/dialogs/: __init__.py  auth_dialog.py  element_edit_dialog.py  export_dialog.py  file_sharing_dialog.py
app/pages/: __init__.py  profile_page.py  shared_files_page.py
app/server/: __init__.py  app_factory.py  config.py
app/server/models/: __init__.py  file.py  user.py
app/server/routes/: __init__.py  auth_routes.py  collaboration_routes.py  file_routes.py  user_routes.py
app/server/services/: __init__.py  auth_service.py  collaboration_service.py  file_service.py
migrations/: env.py
migrations/versions/: 001_initial.py
